# kafka-topic-loader

./: README.md  loader.py  producers.py  pyproject.toml  topics.py
